--- a/Views/Books/Details.cshtml
+++ b/Views/Books/Details.cshtml
@@ -27,10 +27,10 @@
             @ViewBag.Pseudo.authors
         </dd>
         <dt class="col-sm-2">
-            Publishers
+            Publisher
         </dt>
         <dd class=<col-sm-10>
-            @ViewBag.Pseudo.publishers
+            @ViewBag.Pseudo.publisher
         </dd>
         <dt class="col-sm-2">
             Published Date
